fix z-index and right issues

--- a/PSS/wwwroot/css/Trash.css
+++ b/PSS/wwwroot/css/Trash.css
@@ -91,10 +91,11 @@ button span ~ span {
     justify-content: space-evenly;
     position: absolute;
     top: 67px;
-    right: 216px;
+    right: 276px;
     background-color: black;
     border: 1px solid white;
     padding-right: 12px;
+    z-index: 9999;
 }
 
 #sortDiv > button {
